--- a/sponsors.html
+++ b/sponsors.html
@@ -94,7 +94,7 @@
       <div class="container">
         
           <div class="row">
-            <div class="col-lg-3">
+            <div class="col-lg-3 col">
               <a href="img/sponsors/AllenBergRacingSchool.png" data-title="Schulich Racing" data-lightbox="Schulich Racing">
                 <img src="img/sponsors/AllenBergRacingSchool.png" width= "200px" class="thumbnail">
               </a>
