--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<h1 id="logo"><a href="index.html">Schulich Racing</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="sponsors.html" class="button special">Home</a></li>
+							<li><a href="index.html" class="button special">Home</a></li>
 							<li><a href="sponsors.html">Sponsors &amp; Partners</a></li>
 							<li><a href="gallery.html">Gallery</a></li>
 						</ul>
@@ -131,7 +131,7 @@
 						<li><a href="https://www.instagram.com/schulich_fsae/" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Schulich Racing. All rights reserved.</li><li>Developed by: <a href="http://innoveerdigital.com">INNOVEER DIGITAL</a></li>
+						<li>&copy; Schulich Racing.</li><li>Developed by: <a href="http://innoveerdigital.com">INNOVEER DIGITAL</a></li>
 					</ul>
 				</footer>
 
