--- a/index.html
+++ b/index.html
@@ -47,23 +47,16 @@
 							<div class="row">
 								<div class="4u 12u$(medium)">
 									<header>
-										<h2>Odio faucibus ipsum integer consequat</h2>
-										<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+										<h2>Who Are We?</h2>
+										<p>Schulich Racing is a fully student run, interfaculty organization</p>
 									</header>
 								</div>
 								<div class="4u 12u$(medium)">
-									<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-									Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-									nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-									augue varius tempus lobortis porttitor accumsan consequat
-									adipiscing lorem dolor.</p>
+									<p>comprised of the best and
+                                    brightest science, engineering, and business students at the University of Calgary. Since 1999, Schulich Racing has given students</p>
 								</div>
 								<div class="4u$ 12u$(medium)">
-									<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-									adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-									Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-									mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-									ipsum dolor nullam.</p>
+									<p>the opportunity to develop their leadership skills andtechnical knowledge through 17 iterations of our open wheel, 2/3 scale Formula-1 style race car.</p>
 								</div>
 							</div>
 						</div>
@@ -76,13 +69,10 @@
 					<span class="image fit main"><img src="images/pic03.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum amet non magna accumsan</h2>
-							<p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+							<h2>What Do We Do?</h2>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
-						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
-						</ul>
+						<p>We are committed to achieving excellence in automotive design, manufacturing, marketing, and branding. Using our past experiences as a foundation, we improve on previous designs in the never-ending pursuit of motorsport distinction. Our engineering and business teams work tirelessly to design and build a new race car every single year. For us, it doesn`t stop.</p>
+						
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
 				</section>
@@ -92,15 +82,10 @@
 					<span class="image fit main bottom"><img src="images/pic04.jpg" alt="" /></span>
 					<div class="content">
 						<header>
-							<h2>Interdum felis blandit praesent sed augue</h2>
-							<p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+							<h2>What Makes Us Stand Out?</h2>
 						</header>
-						<p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
-						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
-
-
-						</ul>
+						<p>Being a part of the Schulich Racing team does not award students any credit towards their degree. We are here purely because this is what we love to do. This is our passion. Our members are extremely self-motivated, and contribute countless hours of their time to the team year round. Being part of this team leads members to being some of the highest pursued engineers and professionals globally.</p>
+					
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
 				</section>
